--- a/Development/WebForm/DongYangweb/Views/Production/ConfirmProduct.cshtml
+++ b/Development/WebForm/DongYangweb/Views/Production/ConfirmProduct.cshtml
@@ -11,31 +11,25 @@
         <div class="divBody">
             <table style="width: 100%;">
                 <tbody>
-                    <tr>
+                    <tr style="height:50px;">
                         <td style="width: 40%; text-align: right; padding-right: 5px;">Mã NV:</td>
                         <td style="width: 60%;">
                             <input type="password" id="txtUsername" size="10" onkeydown="return Login()">
                         </td>
                     </tr>
-                    <tr>
-                        <td style="text-align: right; padding-right: 5px;">Vị trí:</td>
-                        <td>
-                            <input disabled="" type="text" id="txtPlaceNo" style="ime-mode: disabled; background-color:Gainsboro;" onkeydown="return MoveToBarcode()">
-                        </td>
-                    </tr>
-                    <tr>
+                    <tr style="height:50px;">
                         <td style="text-align: right; padding-right: 5px;">Mã vạch:</td>
                         <td>
                             <input disabled="" type="text" id="txtBarcode" style="ime-mode: disabled; background-color:Gainsboro;" onkeydown="return ProductionBefore()">
                         </td>
                     </tr>
-                    <tr>
+                    <tr style="height:50px;">
                         <td style="text-align: right; padding-right: 5px;">Kết quả:</td>
                         <td>
                             <span id="lblResult" class="cResult"></span>
                         </td>
                     </tr>
-                    <tr>
+                    <tr style="height:50px;">
                         <td colspan=2>
                             &nbsp;<input type="button" id="btnMenu" class="Button" value="Menu" onclick="Menu()" style="width:100px;">
                             <input type="button" id="btnClear" class="Button" value="Làm mới" onclick="Clear()" style="width:100px;">
@@ -44,11 +38,9 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="Message" style="height: 160px;">
-                <textarea readonly id="txtMessage" style="position:absolute;z-index:2;height: 156px;overflow-x: hidden;"></textarea>
+            <div class="Message" style="height: 210px;">
+                <textarea readonly id="txtMessage" style="position:absolute;z-index:2;height: 200px;overflow-x: hidden;"></textarea>
             </div>
-            <input type="button" id="btnEnd" class="Button" value="Kết thúc" onclick="End()" style="margin-left: 10px; width:120px; background-color:red;color:white;">
-            <input type="button" id="btnContinue" class="Button" value="Tiếp tục" onclick="Continue()" style="float:right; margin-right: 10px; width:120px; background-color:blue;color:white;visibility: visible;">
         </div>
     </div>
 </form>
@@ -56,31 +48,15 @@
     var Menu = function () {
         window.location = '@Url.Action("Index", "Home")';
     };
-    var End = function () {
-        var username = $.trim(document.getElementById("txtUsername").value);
-        var placeNo = $.trim(document.getElementById('txtPlaceNo').value);
-        var barcode = $.trim(document.getElementById('txtBarcode').value);
-        var result = $.trim(document.getElementById('lblResult').innerText);
-        var message = $.trim(document.getElementById('txtMessage').value);
-        window.location = '@Url.Action("End", "Production")?username=' + username + '&placeNo=' + placeNo + '&barcode=' + barcode + '&result=' + result + '&message=' + message;
-    };
-    var Continue = function () {
-        var username = $.trim(document.getElementById("txtUsername").value);
-        var placeNo = $.trim(document.getElementById('txtPlaceNo').value);
-        var barcode = $.trim(document.getElementById('txtBarcode').value);
-        var result = $.trim(document.getElementById('lblResult').innerText);
-        var message = $.trim(document.getElementById('txtMessage').value);
-        window.location = '@Url.Action("Continue", "Production")?username=' + username + '&placeNo=' + placeNo + '&barcode=' + barcode + '&result=' + result + '&message=' + message;
-    };
     //Đăng nhập
     function Login() {
         if (!event.keyCode || (event.keyCode != 13 && event.keyCode != 9)) {
             return;
         }
         //Kiểm tra giá trị đã nhập chưa
-        var username = $.trim(document.getElementById("txtUsername").value);
+        var username = $.trim(document.getElementById('txtUsername').value);
         if (username == '') {
-            document.getElementById('txtMessage').value = 'Hãy nhập tài khoản';
+            document.getElementById('txtMessage').value = 'Hãy nhập mã nhân viên';
             document.getElementById('txtUsername').focus();
             return false;
         }
@@ -89,7 +65,7 @@
             type: "GET",
             cache: false,
             async: false,
-            url: '@Url.Action("Login", "Home")?username=' + username + '&functionName=VerifyProduct',
+            url: '@Url.Action("Login", "Home")?username=' + username + '&functionName=1',
             dataType: "text",
             success: LoginAfter,
             error: AjaxErrorAfter
@@ -102,22 +78,15 @@
         var result = parameter[0];
         var message = parameter[1];
         if (result == 'OK') {
-            document.getElementById('txtMessage').value = 'Hãy nhập mã vị trí';
-
-            document.getElementById("btnClear").disabled = false;
+            document.getElementById('txtMessage').value = 'Hãy nhập mã vạch sản phẩm';
+            document.getElementById('btnClear').disabled = false;
             document.getElementById('btnClear').style.color = 'Black';
-
             document.getElementById('txtUsername').disabled = true;
             document.getElementById('txtUsername').style.backgroundColor = 'Gainsboro';
-
-            document.getElementById('txtPlaceNo').disabled = false;
-            document.getElementById('txtPlaceNo').style.backgroundColor = 'White';
-
             document.getElementById('txtBarcode').disabled = false;
-            document.getElementById('txtBarcode').style.backgroundColor = 'Gainsboro';
-
-            document.getElementById('txtPlaceNo').focus();
-            document.getElementById('txtPlaceNo').select();
+            document.getElementById('txtBarcode').style.backgroundColor = 'White';
+            document.getElementById('txtBarcode').focus();
+            document.getElementById('txtBarcode').select();
             return;
         } else {
             Logout();
@@ -135,23 +104,14 @@
         document.getElementById('lblResult').innerText = '';
         document.getElementById('txtMessage').value = '';
         document.getElementById('btnClear').style.color = '#ccc';
-        document.getElementById("btnClear").disabled = true;
-        document.getElementById('btnEnd').style.backgroundColor = '#eee';
-        document.getElementById('btnEnd').style.color = '#ccc';
-        document.getElementById("btnEnd").disabled = true;
-        document.getElementById('btnContinue').style.backgroundColor = '#eee';
-        document.getElementById('btnContinue').style.color = '#ccc';
-        document.getElementById("btnContinue").disabled = true;
-        document.getElementById('txtPlaceNo').value = '';
-        document.getElementById('txtPlaceNo').disabled = true;
-        document.getElementById('txtPlaceNo').style.backgroundColor = 'Gainsboro';
+        document.getElementById('btnClear').disabled = true;
         document.getElementById('txtBarcode').value = '';
         document.getElementById('txtBarcode').disabled = true;
         document.getElementById('txtBarcode').style.backgroundColor = 'Gainsboro';
         document.getElementById('txtUsername').style.backgroundColor = 'White';
         document.getElementById('txtUsername').disabled = false;
         document.getElementById('txtUsername').value = '';
-        document.getElementById("txtUsername").focus();
+        document.getElementById('txtUsername').focus();
         document.getElementById('txtUsername').select();
         SetStyleResultOK();
     };
@@ -159,20 +119,11 @@
     var Clear = function () {
         document.getElementById('lblResult').innerText = '';
         document.getElementById('txtMessage').value = '';
-        document.getElementById('btnEnd').style.backgroundColor = '#eee';
-        document.getElementById('btnEnd').style.color = '#ccc';
-        document.getElementById("btnEnd").disabled = true;
-        document.getElementById('btnContinue').style.backgroundColor = '#eee';
-        document.getElementById('btnContinue').style.color = '#ccc';
-        document.getElementById("btnContinue").disabled = true;
-        document.getElementById('txtPlaceNo').value = '';
-        document.getElementById('txtPlaceNo').style.backgroundColor = 'White';
-        document.getElementById('txtPlaceNo').disabled = false;
         document.getElementById('txtBarcode').value = '';
-        document.getElementById('txtBarcode').style.backgroundColor = 'Gainsboro';
-        document.getElementById('txtBarcode').disabled = true;
-        document.getElementById('txtPlaceNo').focus();
-        document.getElementById('txtPlaceNo').select();
+        document.getElementById('txtBarcode').style.backgroundColor = 'White';
+        document.getElementById('txtBarcode').disabled = false;
+        document.getElementById('txtBarcode').focus();
+        document.getElementById('txtBarcode').select();
         SetStyleResultOK();
     };
     function SetStyleResultNG() {
@@ -182,36 +133,6 @@
     function SetStyleResultOK() {
         document.getElementById('lblResult').style.backgroundColor = 'White';
         document.getElementById('lblResult').style.color = 'Black';
-    }
-    //Kiểm tra ma vi tri
-    function CheckPlace(placeNo) {
-        //Kiểm tra giá trị đã nhập chưa
-        if (placeNo == '') {
-            document.getElementById('txtMessage').value = 'Hãy nhập mã vị trí';
-            document.getElementById('txtPlaceNo').focus();
-            document.getElementById('txtPlaceNo').select();
-            return false;
-        }
-        return true;
-    }
-    //Di chuyển con trỏ đến ô mã vạch
-    function MoveToBarcode() {
-        if (!event.keyCode || (event.keyCode != 13 && event.keyCode != 9)) {
-            return;
-        }
-        var placeNo = $.trim(document.getElementById('txtPlaceNo').value);
-        document.getElementById('txtPlaceNo').value = placeNo;
-        if (!CheckPlace(placeNo)) {
-            return false;
-        }
-        document.getElementById('txtMessage').value = 'Hãy nhập mã vạch sản phẩm';
-        document.getElementById('txtPlaceNo').disabled = true;
-        document.getElementById('txtPlaceNo').style.backgroundColor = 'Gainsboro';
-        document.getElementById('txtBarcode').disabled = false;
-        document.getElementById('txtBarcode').style.backgroundColor = 'White';
-        document.getElementById('txtBarcode').focus();
-        document.getElementById('txtBarcode').select();
-        return;
     }
     //Xử lý trước khi Xác nhận sản phẩm
     function ProductionBefore() {
@@ -236,13 +157,12 @@
         document.getElementById('txtBarcode').style.backgroundColor = 'Gainsboro';
         document.getElementById('txtBarcode').disabled = true;
         var username = $.trim(document.getElementById('txtUsername').value);
-        var placeNo = $.trim(document.getElementById('txtPlaceNo').value);
         var barcode = $.trim(document.getElementById('txtBarcode').value);
         $.ajax({
             type: "GET",
             cache: false,
             async: false,
-            url: '@Url.Action("VerifyProduct", "Production")?username=' + username + '&placeNo=' + placeNo + '&barcode=' + barcode,
+            url: '@Url.Action("VerifyProduct", "Production")?username=' + username + '&barcode=' + barcode + '&productionStatus=1&actionStatus=0',
             dataType: "text",
             success: SubmitAfter,
             error: AjaxErrorSubmitAfter
@@ -253,23 +173,13 @@
         var parameter = data.split("#");
         var result = parameter[0];
         var message = parameter[1];
-        var continues = parameter[2];
         document.getElementById('lblResult').innerText = result;
         document.getElementById('txtMessage').value = message;
         if (result == 'NG') {
-            if (continues != '') {
-                document.getElementById('btnContinue').style.backgroundColor = 'Blue';
-                document.getElementById('btnContinue').style.color = 'White';
-                document.getElementById("btnContinue").disabled = false;
-            }
             SetStyleResultNG();
         } else {
             SetStyleResultOK();
         }
-        document.getElementById('btnEnd').style.backgroundColor = 'Red';
-        document.getElementById('btnEnd').style.color = 'White';
-        document.getElementById("btnEnd").disabled = false;
-
         return false;
     }
     var AjaxErrorSubmitAfter = function (xhr) {
